
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_3__ ;
typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


struct daoc_packet_header {int dummy; } ;
struct TYPE_5__ {int data; void* command_id; } ;
struct TYPE_4__ {char ESC1; char ESC2; void* payload_size; } ;
struct daoc_packet {TYPE_2__ payload; TYPE_1__ header; } ;
struct TYPE_6__ {int socket; scalar_t__ sym_key_set; } ;


 TYPE_3__ client_sock_state ;
 int free (struct daoc_packet*) ;
 void* htons (int) ;
 struct daoc_packet* malloc (int) ;
 int memcpy (int *,void*,int) ;
 int send (int ,struct daoc_packet*,int,int ) ;
 int symcrypt_in_place (unsigned char*,int) ;

int send_daoc_packet(int command_id, void *buff, int len)
{
    struct daoc_packet *mem;
    int retval;
    int payload_size;
    int total_size;

    payload_size = len + 2;
    total_size = payload_size + sizeof(struct daoc_packet_header);
    mem = malloc(total_size);
    mem->header.ESC1 = '\x1b';
    mem->header.ESC2 = '\x1b';
    mem->header.payload_size = htons(payload_size);
    mem->payload.command_id = htons(command_id);
    memcpy(&mem->payload.data, buff, len);

    if (client_sock_state.sym_key_set)
        symcrypt_in_place((unsigned char *)&mem->payload, payload_size);

    retval = send(client_sock_state.socket, mem, total_size, 0);

    free(mem);
    return retval;
}
